# learn-translate

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/: api.py  audio.py  main.ui  setting.py
src/controllers/: controllers.py  get_result.py  hokeyController.py  keyEventController.py  mainController.py
src/models/: ApiModel.py  AudioModel.py
src/usecases/: usecases.py
src/views/: main_windows.ui  quick_translate_window.ui  setting_windows.ui  views.py
test/: README.org
test/models/: test_ApiModel.py
