[tool.poetry]
name = "learn-translate"
description = ""
authors = ["shdennlin <shawndennislin@gmail.com>"]
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
loguru = "^0.6.0"
setuptools = "^58.2.0"
pydantic = "^1.9.0"
requests = "^2.27.1"
python-dotenv = "^0.20.0"
pygame = "^2.1.2"
PyQt5 = "^5.15.6"
pynput = "^1.7.6"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
autoflake = "^1.4"
importmagic = "^0.1.7"
epc = "^0.0.5"
yapf = "^0.32.0"
toml = "^0.10.2"
isort = "^5.10.1"
PyQt5 = "^5.15.6"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"