[tool.poetry]
name = "learn-translate"
description = ""
authors = ["shdennlin <shawndennislin@gmail.com>"]
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
loguru = "^0.6.0"
setuptools = "^58.2.0"
pydantic = "^1.9.0"
requests = "^2.27.1"
python-dotenv = "^0.20.0"
pygame = "^2.1.2"
textblob = "^0.17.1"
pynput = "^1.7.6"
PySide6 = "^6.3.1"
pywin32 = { version = "^304", markers = "sys_platform == 'win32'" }

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
autopep8 = "^1.6.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"